crates/kul-lsp/src/features/snapshots/kul_lsp__features__semantic_tokens__tests__snapshot_adoption_and_belonging.snap
---
source: crates/kul-lsp/src/features/semantic_tokens.rs
expression: decoded
---
[
    Decoded {
        line: 23,
        character: 0,
        length: 6,
        kind: "keyword",
        text: "person",
    },
    Decoded {
        line: 23,
        character: 7,
        length: 6,
        kind: "function",
        text: "carlos",
    },
    Decoded {
        line: 23,
        character: 15,
        length: 4,
        kind: "property",
        text: "name",
    },
    Decoded {
        line: 23,
        character: 20,
        length: 16,
        kind: "string",
        text: "\"Carlos Mendoza\"",
    },
    Decoded {
        line: 23,
        character: 38,
        length: 6,
        kind: "property",
        text: "gender",
    },
    Decoded {
        line: 23,
        character: 45,
        length: 4,
        kind: "enum",
        text: "male",
    },
    Decoded {
        line: 23,
        character: 53,
        length: 4,
        kind: "property",
        text: "born",
    },
    Decoded {
        line: 23,
        character: 58,
        length: 10,
        kind: "number",
        text: "1973-02-18",
    },
    Decoded {
        line: 24,
        character: 0,
        length: 6,
        kind: "keyword",
        text: "person",
    },
    Decoded {
        line: 24,
        character: 7,
        length: 4,
        kind: "function",
        text: "rosa",
    },
    Decoded {
        line: 24,
        character: 15,
        length: 4,
        kind: "property",
        text: "name",
    },
    Decoded {
        line: 24,
        character: 20,
        length: 14,
        kind: "string",
        text: "\"Rosa Mendoza\"",
    },
    Decoded {
        line: 24,
        character: 38,
        length: 6,
        kind: "property",
        text: "gender",
    },
    Decoded {
        line: 24,
        character: 45,
        length: 6,
        kind: "enum",
        text: "female",
    },
    Decoded {
        line: 24,
        character: 53,
        length: 4,
        kind: "property",
        text: "born",
    },
    Decoded {
        line: 24,
        character: 58,
        length: 10,
        kind: "number",
        text: "1975-09-24",
    },
    Decoded {
        line: 26,
        character: 0,
        length: 8,
        kind: "keyword",
        text: "marriage",
    },
    Decoded {
        line: 26,
        character: 9,
        length: 13,
        kind: "function",
        text: "m_carlos_rosa",
    },
    Decoded {
        line: 26,
        character: 23,
        length: 6,
        kind: "parameter",
        text: "carlos",
    },
    Decoded {
        line: 26,
        character: 30,
        length: 4,
        kind: "parameter",
        text: "rosa",
    },
    Decoded {
        line: 26,
        character: 36,
        length: 5,
        kind: "property",
        text: "start",
    },
    Decoded {
        line: 26,
        character: 42,
        length: 10,
        kind: "number",
        text: "2000-01-15",
    },
    Decoded {
        line: 29,
        character: 0,
        length: 6,
        kind: "keyword",
        text: "person",
    },
    Decoded {
        line: 29,
        character: 7,
        length: 5,
        kind: "function",
        text: "mateo",
    },
    Decoded {
        line: 29,
        character: 14,
        length: 4,
        kind: "property",
        text: "name",
    },
    Decoded {
        line: 29,
        character: 19,
        length: 15,
        kind: "string",
        text: "\"Mateo Mendoza\"",
    },
    Decoded {
        line: 29,
        character: 36,
        length: 6,
        kind: "property",
        text: "gender",
    },
    Decoded {
        line: 29,
        character: 43,
        length: 4,
        kind: "enum",
        text: "male",
    },
    Decoded {
        line: 29,
        character: 49,
        length: 4,
        kind: "property",
        text: "born",
    },
    Decoded {
        line: 29,
        character: 54,
        length: 10,
        kind: "number",
        text: "2003-05-10",
    },
    Decoded {
        line: 30,
        character: 2,
        length: 5,
        kind: "keyword",
        text: "birth",
    },
    Decoded {
        line: 30,
        character: 8,
        length: 13,
        kind: "parameter",
        text: "m_carlos_rosa",
    },
    Decoded {
        line: 34,
        character: 0,
        length: 6,
        kind: "keyword",
        text: "person",
    },
    Decoded {
        line: 34,
        character: 7,
        length: 6,
        kind: "function",
        text: "bayani",
    },
    Decoded {
        line: 34,
        character: 15,
        length: 4,
        kind: "property",
        text: "name",
    },
    Decoded {
        line: 34,
        character: 20,
        length: 16,
        kind: "string",
        text: "\"Bayani Mendoza\"",
    },
    Decoded {
        line: 34,
        character: 38,
        length: 6,
        kind: "property",
        text: "gender",
    },
    Decoded {
        line: 34,
        character: 45,
        length: 5,
        kind: "enum",
        text: "other",
    },
    Decoded {
        line: 34,
        character: 52,
        length: 4,
        kind: "property",
        text: "born",
    },
    Decoded {
        line: 34,
        character: 57,
        length: 5,
        kind: "number",
        text: "~1995",
    },
    Decoded {
        line: 35,
        character: 2,
        length: 8,
        kind: "keyword",
        text: "adoption",
    },
    Decoded {
        line: 35,
        character: 11,
        length: 13,
        kind: "parameter",
        text: "m_carlos_rosa",
    },
    Decoded {
        line: 35,
        character: 26,
        length: 5,
        kind: "property",
        text: "start",
    },
    Decoded {
        line: 35,
        character: 32,
        length: 10,
        kind: "number",
        text: "2007-06-01",
    },
    Decoded {
        line: 38,
        character: 0,
        length: 6,
        kind: "keyword",
        text: "person",
    },
    Decoded {
        line: 38,
        character: 7,
        length: 7,
        kind: "function",
        text: "dalisay",
    },
    Decoded {
        line: 38,
        character: 16,
        length: 4,
        kind: "property",
        text: "name",
    },
    Decoded {
        line: 38,
        character: 21,
        length: 17,
        kind: "string",
        text: "\"Dalisay Mendoza\"",
    },
    Decoded {
        line: 38,
        character: 40,
        length: 6,
        kind: "property",
        text: "gender",
    },
    Decoded {
        line: 38,
        character: 47,
        length: 6,
        kind: "enum",
        text: "female",
    },
    Decoded {
        line: 38,
        character: 55,
        length: 4,
        kind: "property",
        text: "born",
    },
    Decoded {
        line: 38,
        character: 60,
        length: 10,
        kind: "number",
        text: "1990-08-03",
    },
    Decoded {
        line: 39,
        character: 2,
        length: 5,
        kind: "keyword",
        text: "birth",
    },
    Decoded {
        line: 39,
        character: 8,
        length: 13,
        kind: "parameter",
        text: "m_eduardo_luz",
    },
    Decoded {
        line: 40,
        character: 2,
        length: 8,
        kind: "keyword",
        text: "adoption",
    },
    Decoded {
        line: 40,
        character: 11,
        length: 13,
        kind: "parameter",
        text: "m_tomas_elena",
    },
    Decoded {
        line: 40,
        character: 26,
        length: 5,
        kind: "property",
        text: "start",
    },
    Decoded {
        line: 40,
        character: 32,
        length: 10,
        kind: "number",
        text: "1994-04-20",
    },
    Decoded {
        line: 40,
        character: 44,
        length: 3,
        kind: "property",
        text: "end",
    },
    Decoded {
        line: 40,
        character: 48,
        length: 10,
        kind: "number",
        text: "1999-02-10",
    },
    Decoded {
        line: 41,
        character: 2,
        length: 8,
        kind: "keyword",
        text: "adoption",
    },
    Decoded {
        line: 41,
        character: 11,
        length: 13,
        kind: "parameter",
        text: "m_carlos_rosa",
    },
    Decoded {
        line: 41,
        character: 26,
        length: 5,
        kind: "property",
        text: "start",
    },
    Decoded {
        line: 41,
        character: 32,
        length: 10,
        kind: "number",
        text: "2002-11-30",
    },
    Decoded {
        line: 44,
        character: 0,
        length: 6,
        kind: "keyword",
        text: "person",
    },
    Decoded {
        line: 44,
        character: 7,
        length: 7,
        kind: "function",
        text: "eduardo",
    },
    Decoded {
        line: 44,
        character: 16,
        length: 4,
        kind: "property",
        text: "name",
    },
    Decoded {
        line: 44,
        character: 21,
        length: 15,
        kind: "string",
        text: "\"Eduardo Reyes\"",
    },
    Decoded {
        line: 44,
        character: 38,
        length: 6,
        kind: "property",
        text: "gender",
    },
    Decoded {
        line: 44,
        character: 45,
        length: 4,
        kind: "enum",
        text: "male",
    },
    Decoded {
        line: 44,
        character: 53,
        length: 4,
        kind: "property",
        text: "born",
    },
    Decoded {
        line: 44,
        character: 58,
        length: 10,
        kind: "number",
        text: "1962-03-11",
    },
    Decoded {
        line: 45,
        character: 0,
        length: 6,
        kind: "keyword",
        text: "person",
    },
    Decoded {
        line: 45,
        character: 7,
        length: 3,
        kind: "function",
        text: "luz",
    },
    Decoded {
        line: 45,
        character: 16,
        length: 4,
        kind: "property",
        text: "name",
    },
    Decoded {
        line: 45,
        character: 21,
        length: 11,
        kind: "string",
        text: "\"Luz Reyes\"",
    },
    Decoded {
        line: 45,
        character: 38,
        length: 6,
        kind: "property",
        text: "gender",
    },
    Decoded {
        line: 45,
        character: 45,
        length: 6,
        kind: "enum",
        text: "female",
    },
    Decoded {
        line: 45,
        character: 53,
        length: 4,
        kind: "property",
        text: "born",
    },
    Decoded {
        line: 45,
        character: 58,
        length: 10,
        kind: "number",
        text: "1965-12-02",
    },
    Decoded {
        line: 47,
        character: 0,
        length: 8,
        kind: "keyword",
        text: "marriage",
    },
    Decoded {
        line: 47,
        character: 9,
        length: 13,
        kind: "function",
        text: "m_eduardo_luz",
    },
    Decoded {
        line: 47,
        character: 23,
        length: 7,
        kind: "parameter",
        text: "eduardo",
    },
    Decoded {
        line: 47,
        character: 31,
        length: 3,
        kind: "parameter",
        text: "luz",
    },
    Decoded {
        line: 47,
        character: 36,
        length: 5,
        kind: "property",
        text: "start",
    },
    Decoded {
        line: 47,
        character: 42,
        length: 10,
        kind: "number",
        text: "1988-07-09",
    },
    Decoded {
        line: 50,
        character: 0,
        length: 6,
        kind: "keyword",
        text: "person",
    },
    Decoded {
        line: 50,
        character: 7,
        length: 5,
        kind: "function",
        text: "tomas",
    },
    Decoded {
        line: 50,
        character: 14,
        length: 4,
        kind: "property",
        text: "name",
    },
    Decoded {
        line: 50,
        character: 19,
        length: 14,
        kind: "string",
        text: "\"Tomas Garcia\"",
    },
    Decoded {
        line: 50,
        character: 35,
        length: 6,
        kind: "property",
        text: "gender",
    },
    Decoded {
        line: 50,
        character: 42,
        length: 4,
        kind: "enum",
        text: "male",
    },
    Decoded {
        line: 50,
        character: 50,
        length: 4,
        kind: "property",
        text: "born",
    },
    Decoded {
        line: 50,
        character: 55,
        length: 10,
        kind: "number",
        text: "1958-06-25",
    },
    Decoded {
        line: 51,
        character: 0,
        length: 6,
        kind: "keyword",
        text: "person",
    },
    Decoded {
        line: 51,
        character: 7,
        length: 5,
        kind: "function",
        text: "elena",
    },
    Decoded {
        line: 51,
        character: 14,
        length: 4,
        kind: "property",
        text: "name",
    },
    Decoded {
        line: 51,
        character: 19,
        length: 14,
        kind: "string",
        text: "\"Elena Garcia\"",
    },
    Decoded {
        line: 51,
        character: 35,
        length: 6,
        kind: "property",
        text: "gender",
    },
    Decoded {
        line: 51,
        character: 42,
        length: 6,
        kind: "enum",
        text: "female",
    },
    Decoded {
        line: 51,
        character: 50,
        length: 4,
        kind: "property",
        text: "born",
    },
    Decoded {
        line: 51,
        character: 55,
        length: 10,
        kind: "number",
        text: "1960-10-14",
    },
    Decoded {
        line: 53,
        character: 0,
        length: 8,
        kind: "keyword",
        text: "marriage",
    },
    Decoded {
        line: 53,
        character: 9,
        length: 13,
        kind: "function",
        text: "m_tomas_elena",
    },
    Decoded {
        line: 53,
        character: 23,
        length: 5,
        kind: "parameter",
        text: "tomas",
    },
    Decoded {
        line: 53,
        character: 29,
        length: 5,
        kind: "parameter",
        text: "elena",
    },
    Decoded {
        line: 53,
        character: 36,
        length: 5,
        kind: "property",
        text: "start",
    },
    Decoded {
        line: 53,
        character: 42,
        length: 10,
        kind: "number",
        text: "1985-03-01",
    },
]
