crates/kul-lsp/src/features/snapshots/kul_lsp__features__semantic_tokens__tests__snapshot_divorce_and_remarriage.snap
---
source: crates/kul-lsp/src/features/semantic_tokens.rs
expression: decoded
---
[
    Decoded {
        line: 20,
        character: 0,
        length: 6,
        kind: "keyword",
        text: "person",
    },
    Decoded {
        line: 20,
        character: 7,
        length: 4,
        kind: "function",
        text: "erik",
    },
    Decoded {
        line: 20,
        character: 15,
        length: 4,
        kind: "property",
        text: "name",
    },
    Decoded {
        line: 20,
        character: 20,
        length: 16,
        kind: "string",
        text: "\"Erik Lindqvist\"",
    },
    Decoded {
        line: 20,
        character: 40,
        length: 6,
        kind: "property",
        text: "gender",
    },
    Decoded {
        line: 20,
        character: 47,
        length: 4,
        kind: "enum",
        text: "male",
    },
    Decoded {
        line: 20,
        character: 55,
        length: 4,
        kind: "property",
        text: "born",
    },
    Decoded {
        line: 20,
        character: 60,
        length: 10,
        kind: "number",
        text: "1970-01-22",
    },
    Decoded {
        line: 21,
        character: 0,
        length: 6,
        kind: "keyword",
        text: "person",
    },
    Decoded {
        line: 21,
        character: 7,
        length: 6,
        kind: "function",
        text: "astrid",
    },
    Decoded {
        line: 21,
        character: 15,
        length: 4,
        kind: "property",
        text: "name",
    },
    Decoded {
        line: 21,
        character: 20,
        length: 18,
        kind: "string",
        text: "\"Astrid Lindqvist\"",
    },
    Decoded {
        line: 21,
        character: 40,
        length: 6,
        kind: "property",
        text: "gender",
    },
    Decoded {
        line: 21,
        character: 47,
        length: 6,
        kind: "enum",
        text: "female",
    },
    Decoded {
        line: 21,
        character: 55,
        length: 4,
        kind: "property",
        text: "born",
    },
    Decoded {
        line: 21,
        character: 60,
        length: 10,
        kind: "number",
        text: "1972-10-08",
    },
    Decoded {
        line: 23,
        character: 0,
        length: 8,
        kind: "keyword",
        text: "marriage",
    },
    Decoded {
        line: 23,
        character: 9,
        length: 13,
        kind: "function",
        text: "m_erik_astrid",
    },
    Decoded {
        line: 23,
        character: 23,
        length: 4,
        kind: "parameter",
        text: "erik",
    },
    Decoded {
        line: 23,
        character: 28,
        length: 6,
        kind: "parameter",
        text: "astrid",
    },
    Decoded {
        line: 23,
        character: 36,
        length: 5,
        kind: "property",
        text: "start",
    },
    Decoded {
        line: 23,
        character: 42,
        length: 10,
        kind: "number",
        text: "1995-06-17",
    },
    Decoded {
        line: 23,
        character: 54,
        length: 3,
        kind: "property",
        text: "end",
    },
    Decoded {
        line: 23,
        character: 58,
        length: 10,
        kind: "number",
        text: "2003-06-15",
    },
    Decoded {
        line: 23,
        character: 70,
        length: 10,
        kind: "property",
        text: "end_reason",
    },
    Decoded {
        line: 23,
        character: 81,
        length: 7,
        kind: "enum",
        text: "divorce",
    },
    Decoded {
        line: 25,
        character: 0,
        length: 6,
        kind: "keyword",
        text: "person",
    },
    Decoded {
        line: 25,
        character: 7,
        length: 6,
        kind: "function",
        text: "linnea",
    },
    Decoded {
        line: 25,
        character: 15,
        length: 4,
        kind: "property",
        text: "name",
    },
    Decoded {
        line: 25,
        character: 20,
        length: 18,
        kind: "string",
        text: "\"Linnea Lindqvist\"",
    },
    Decoded {
        line: 25,
        character: 40,
        length: 6,
        kind: "property",
        text: "gender",
    },
    Decoded {
        line: 25,
        character: 47,
        length: 6,
        kind: "enum",
        text: "female",
    },
    Decoded {
        line: 25,
        character: 55,
        length: 4,
        kind: "property",
        text: "born",
    },
    Decoded {
        line: 25,
        character: 60,
        length: 10,
        kind: "number",
        text: "1998-03-29",
    },
    Decoded {
        line: 26,
        character: 2,
        length: 5,
        kind: "keyword",
        text: "birth",
    },
    Decoded {
        line: 26,
        character: 8,
        length: 13,
        kind: "parameter",
        text: "m_erik_astrid",
    },
    Decoded {
        line: 29,
        character: 0,
        length: 6,
        kind: "keyword",
        text: "person",
    },
    Decoded {
        line: 29,
        character: 7,
        length: 4,
        kind: "function",
        text: "maja",
    },
    Decoded {
        line: 29,
        character: 13,
        length: 4,
        kind: "property",
        text: "name",
    },
    Decoded {
        line: 29,
        character: 18,
        length: 11,
        kind: "string",
        text: "\"Maja Holm\"",
    },
    Decoded {
        line: 29,
        character: 31,
        length: 6,
        kind: "property",
        text: "gender",
    },
    Decoded {
        line: 29,
        character: 38,
        length: 6,
        kind: "enum",
        text: "female",
    },
    Decoded {
        line: 29,
        character: 46,
        length: 4,
        kind: "property",
        text: "born",
    },
    Decoded {
        line: 29,
        character: 51,
        length: 10,
        kind: "number",
        text: "1975-05-14",
    },
    Decoded {
        line: 31,
        character: 0,
        length: 8,
        kind: "keyword",
        text: "marriage",
    },
    Decoded {
        line: 31,
        character: 9,
        length: 11,
        kind: "function",
        text: "m_erik_maja",
    },
    Decoded {
        line: 31,
        character: 21,
        length: 4,
        kind: "parameter",
        text: "erik",
    },
    Decoded {
        line: 31,
        character: 26,
        length: 4,
        kind: "parameter",
        text: "maja",
    },
    Decoded {
        line: 31,
        character: 32,
        length: 5,
        kind: "property",
        text: "start",
    },
    Decoded {
        line: 31,
        character: 38,
        length: 10,
        kind: "number",
        text: "2006-08-26",
    },
    Decoded {
        line: 33,
        character: 0,
        length: 6,
        kind: "keyword",
        text: "person",
    },
    Decoded {
        line: 33,
        character: 7,
        length: 5,
        kind: "function",
        text: "oskar",
    },
    Decoded {
        line: 33,
        character: 14,
        length: 4,
        kind: "property",
        text: "name",
    },
    Decoded {
        line: 33,
        character: 19,
        length: 17,
        kind: "string",
        text: "\"Oskar Lindqvist\"",
    },
    Decoded {
        line: 33,
        character: 38,
        length: 6,
        kind: "property",
        text: "gender",
    },
    Decoded {
        line: 33,
        character: 45,
        length: 4,
        kind: "enum",
        text: "male",
    },
    Decoded {
        line: 33,
        character: 51,
        length: 4,
        kind: "property",
        text: "born",
    },
    Decoded {
        line: 33,
        character: 56,
        length: 10,
        kind: "number",
        text: "2008-12-01",
    },
    Decoded {
        line: 34,
        character: 2,
        length: 5,
        kind: "keyword",
        text: "birth",
    },
    Decoded {
        line: 34,
        character: 8,
        length: 11,
        kind: "parameter",
        text: "m_erik_maja",
    },
    Decoded {
        line: 37,
        character: 0,
        length: 6,
        kind: "keyword",
        text: "person",
    },
    Decoded {
        line: 37,
        character: 7,
        length: 5,
        kind: "function",
        text: "johan",
    },
    Decoded {
        line: 37,
        character: 14,
        length: 4,
        kind: "property",
        text: "name",
    },
    Decoded {
        line: 37,
        character: 19,
        length: 12,
        kind: "string",
        text: "\"Johan Berg\"",
    },
    Decoded {
        line: 37,
        character: 33,
        length: 6,
        kind: "property",
        text: "gender",
    },
    Decoded {
        line: 37,
        character: 40,
        length: 4,
        kind: "enum",
        text: "male",
    },
    Decoded {
        line: 37,
        character: 46,
        length: 4,
        kind: "property",
        text: "born",
    },
    Decoded {
        line: 37,
        character: 51,
        length: 10,
        kind: "number",
        text: "1971-07-30",
    },
    Decoded {
        line: 39,
        character: 0,
        length: 8,
        kind: "keyword",
        text: "marriage",
    },
    Decoded {
        line: 39,
        character: 9,
        length: 14,
        kind: "function",
        text: "m_astrid_johan",
    },
    Decoded {
        line: 39,
        character: 24,
        length: 6,
        kind: "parameter",
        text: "astrid",
    },
    Decoded {
        line: 39,
        character: 31,
        length: 5,
        kind: "parameter",
        text: "johan",
    },
    Decoded {
        line: 39,
        character: 38,
        length: 5,
        kind: "property",
        text: "start",
    },
    Decoded {
        line: 39,
        character: 44,
        length: 10,
        kind: "number",
        text: "2007-04-12",
    },
    Decoded {
        line: 41,
        character: 0,
        length: 6,
        kind: "keyword",
        text: "person",
    },
    Decoded {
        line: 41,
        character: 7,
        length: 5,
        kind: "function",
        text: "frida",
    },
    Decoded {
        line: 41,
        character: 14,
        length: 4,
        kind: "property",
        text: "name",
    },
    Decoded {
        line: 41,
        character: 19,
        length: 12,
        kind: "string",
        text: "\"Frida Berg\"",
    },
    Decoded {
        line: 41,
        character: 33,
        length: 6,
        kind: "property",
        text: "gender",
    },
    Decoded {
        line: 41,
        character: 40,
        length: 6,
        kind: "enum",
        text: "female",
    },
    Decoded {
        line: 41,
        character: 48,
        length: 4,
        kind: "property",
        text: "born",
    },
    Decoded {
        line: 41,
        character: 53,
        length: 10,
        kind: "number",
        text: "2010-09-05",
    },
    Decoded {
        line: 42,
        character: 2,
        length: 5,
        kind: "keyword",
        text: "birth",
    },
    Decoded {
        line: 42,
        character: 8,
        length: 14,
        kind: "parameter",
        text: "m_astrid_johan",
    },
]
