crates/kul-lsp/src/features/snapshots/kul_lsp__features__semantic_tokens__tests__snapshot_polygamous_family.snap
---
source: crates/kul-lsp/src/features/semantic_tokens.rs
expression: decoded
---
[
    Decoded {
        line: 6,
        character: 0,
        length: 6,
        kind: "keyword",
        text: "person",
    },
    Decoded {
        line: 6,
        character: 7,
        length: 5,
        kind: "function",
        text: "alice",
    },
    Decoded {
        line: 6,
        character: 15,
        length: 4,
        kind: "property",
        text: "name",
    },
    Decoded {
        line: 6,
        character: 20,
        length: 14,
        kind: "string",
        text: "\"Alice Sharma\"",
    },
    Decoded {
        line: 6,
        character: 36,
        length: 6,
        kind: "property",
        text: "gender",
    },
    Decoded {
        line: 6,
        character: 43,
        length: 6,
        kind: "enum",
        text: "female",
    },
    Decoded {
        line: 6,
        character: 51,
        length: 4,
        kind: "property",
        text: "born",
    },
    Decoded {
        line: 6,
        character: 56,
        length: 10,
        kind: "number",
        text: "1950-04-12",
    },
    Decoded {
        line: 7,
        character: 0,
        length: 6,
        kind: "keyword",
        text: "person",
    },
    Decoded {
        line: 7,
        character: 7,
        length: 6,
        kind: "function",
        text: "devraj",
    },
    Decoded {
        line: 7,
        character: 15,
        length: 4,
        kind: "property",
        text: "name",
    },
    Decoded {
        line: 7,
        character: 20,
        length: 14,
        kind: "string",
        text: "\"Devraj Kumar\"",
    },
    Decoded {
        line: 7,
        character: 36,
        length: 6,
        kind: "property",
        text: "gender",
    },
    Decoded {
        line: 7,
        character: 43,
        length: 4,
        kind: "enum",
        text: "male",
    },
    Decoded {
        line: 7,
        character: 51,
        length: 4,
        kind: "property",
        text: "born",
    },
    Decoded {
        line: 7,
        character: 56,
        length: 10,
        kind: "number",
        text: "1948-06-21",
    },
    Decoded {
        line: 8,
        character: 0,
        length: 6,
        kind: "keyword",
        text: "person",
    },
    Decoded {
        line: 8,
        character: 7,
        length: 5,
        kind: "function",
        text: "meera",
    },
    Decoded {
        line: 8,
        character: 15,
        length: 4,
        kind: "property",
        text: "name",
    },
    Decoded {
        line: 8,
        character: 20,
        length: 7,
        kind: "string",
        text: "\"Meera\"",
    },
    Decoded {
        line: 8,
        character: 36,
        length: 6,
        kind: "property",
        text: "gender",
    },
    Decoded {
        line: 8,
        character: 43,
        length: 6,
        kind: "enum",
        text: "female",
    },
    Decoded {
        line: 8,
        character: 51,
        length: 4,
        kind: "property",
        text: "born",
    },
    Decoded {
        line: 8,
        character: 56,
        length: 10,
        kind: "number",
        text: "1955-03-08",
    },
    Decoded {
        line: 10,
        character: 0,
        length: 6,
        kind: "keyword",
        text: "person",
    },
    Decoded {
        line: 10,
        character: 7,
        length: 5,
        kind: "function",
        text: "priya",
    },
    Decoded {
        line: 10,
        character: 14,
        length: 4,
        kind: "property",
        text: "name",
    },
    Decoded {
        line: 10,
        character: 19,
        length: 13,
        kind: "string",
        text: "\"Priya Kumar\"",
    },
    Decoded {
        line: 10,
        character: 34,
        length: 6,
        kind: "property",
        text: "gender",
    },
    Decoded {
        line: 10,
        character: 41,
        length: 6,
        kind: "enum",
        text: "female",
    },
    Decoded {
        line: 10,
        character: 49,
        length: 4,
        kind: "property",
        text: "born",
    },
    Decoded {
        line: 10,
        character: 54,
        length: 10,
        kind: "number",
        text: "1994-12-01",
    },
    Decoded {
        line: 11,
        character: 2,
        length: 5,
        kind: "keyword",
        text: "birth",
    },
    Decoded {
        line: 11,
        character: 8,
        length: 14,
        kind: "parameter",
        text: "m_devraj_alice",
    },
    Decoded {
        line: 13,
        character: 0,
        length: 8,
        kind: "keyword",
        text: "marriage",
    },
    Decoded {
        line: 13,
        character: 9,
        length: 14,
        kind: "function",
        text: "m_devraj_meera",
    },
    Decoded {
        line: 13,
        character: 24,
        length: 6,
        kind: "parameter",
        text: "devraj",
    },
    Decoded {
        line: 13,
        character: 31,
        length: 5,
        kind: "parameter",
        text: "meera",
    },
    Decoded {
        line: 13,
        character: 38,
        length: 5,
        kind: "property",
        text: "start",
    },
    Decoded {
        line: 13,
        character: 44,
        length: 10,
        kind: "number",
        text: "1990-01-01",
    },
    Decoded {
        line: 14,
        character: 0,
        length: 8,
        kind: "keyword",
        text: "marriage",
    },
    Decoded {
        line: 14,
        character: 9,
        length: 14,
        kind: "function",
        text: "m_devraj_alice",
    },
    Decoded {
        line: 14,
        character: 24,
        length: 6,
        kind: "parameter",
        text: "devraj",
    },
    Decoded {
        line: 14,
        character: 31,
        length: 5,
        kind: "parameter",
        text: "alice",
    },
    Decoded {
        line: 14,
        character: 38,
        length: 5,
        kind: "property",
        text: "start",
    },
    Decoded {
        line: 14,
        character: 44,
        length: 10,
        kind: "number",
        text: "1992-02-14",
    },
]
